Friggin spelling errors...

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </div>
       <div style="text-align: center;">
         <button type="submit" class="btn">Google Search</button>
-        <button type="submit" class="btn">I'm Feelilng Lucky</button>
+        <button type="submit" class="btn">I'm Feeling Lucky</button>
       </div>
   </body>
 
